<resources>
    <string name="app_name">Nikoh</string>
    <string name="tuy_onson">Tuy onson!</string>
    <string name="tuy_onson_subtitle">Tuyingiz uchun hamma servislar bir joyda! Tezroq va onson</string>
    <string name="avtorizatsiya">Avtorizatsiya</string>
    <string name="registratsiya">Registratsiya</string>
    <string name="yangi_akkaunt">Yangi akkaunt</string>
    <string name="keyinroq">Keyinroq</string>
    <string name="asosiy">Asosiy</string>
    <string name="saqlangan">Saqlangan</string>
    <string name="profil">Profil</string>
    <string name="davom_etish">Davom etish</string>
    <string name="_998">+998(</string>
    <string name="trk">Telefon raqamni kiriting</string>
    <string name="boshlash">Boshlash</string>
    <string name="kirish">Kirish</string>
    <string name="__">-----</string>
    <string name="rtky">raqamiga tasdiqlash uchun kod yuborildi</string>
    <string name="trnk">Telefon raqam notug\'ri kiritilgan</string>
    <string name="kmukuk">Kop marta urinildi,keyinroq unirib koring</string>
    <string name="txtzt">Tizimda xatolik,tez orada togirlanadi</string>
    <string name="_00000">000000</string>
    <string name="knquk">Kod notugri, qayta urinib ko\'ring</string>
    <string name="kod_qayta_yuborildi">Kod qayta yuborildi!</string>
    <string name="hammasi_tayyor">Hammasi tayyor</string>
    <string name="ismingizni_kiriting">Ismingizni kiriting</string>
    <string name="rtcj">Raqamga tasdiqlash uchun sms kod junatamiz</string>
    <string name="bski">Boshqalarga ko’radigan ismingiz</string>
    <string name="sms_kod_yuborildi">sms kod yuborildi</string>
    <string name="_998971871415">+998971871415</string>
    <string name="akkaunt">Akkaunt</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="yordam">Yordam</string>
    <string name="biznes_akk_otish">Biznes akkauntga o’tish</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="mobil_nomer">Mobil nomer</string>
    <string name="saqlash">Saqlash</string>
    <string name="title">Title</string>
    <string name="action_button">Action button</string>
    <string name="login_placeholder">https://cdn-icons-png.flaticon.com/512/4034/4034219.png</string>
    <string name="akauntga_kiring">Akauntga kiring</string>
    <string name="auth_placeholder_subtitle">Platformadan to\'liq foydalanish uchun profil oching</string>
    <string name="hsb">Hozircha saqlanganlar bo\'sh</string>
    <string name="sssyk">Saqlangan servislar shu yerda ko\'rinadi</string>
    <string name="uzbek">Uzbek</string>
    <string name="ruscha">Ruscha</string>
    <string name="til">Til</string>

    <string name="oformleniya">Oformleniya</string>
    <string name="zaks">Zaks</string>
    <string name="qo_shiqchi">Qo\'shiqchi</string>
    <string name="restoran">Restoran</string>
    <string name="boshlovchi">Boshlovchi</string>
    <string name="kartej">Kartej</string>
    <string name="kuylak">Kuylak</string>
    <string name="gullar">Gullar</string>
    <string name="sarpo">Sarpo</string>
    <string name="video">Video</string>
    <string name="foto">Foto</string>
    <string name="hostes">Hostes</string>
    <string name="kvartet">Kvartet</string>
    <string name="raqqoslar">Raqqoslar</string>
    <string name="milliy">Milliy</string>
    <string name="offisiant">Offisiant</string>
    <string name="dj"><![CDATA[D & J]]></string>
    <string name="povar">Povar</string>
    <string name="tort">Tort</string>
    <string name="kulgu">Kulgu</string>
    <string name="prokat">Prokat</string>
    <string name="monitor">Monitor</string>
    <string name="ovoz">Ovoz</string>
    <string name="admin">Admin</string>
    <string name="hammasi">Hammasi</string>
    <string name="karvin">Karvin</string>

    <string name="kategoriyalar">Kategoriyalar</string>
    <string name="kategoriyani_tanlang">Kategoriyani tanlang</string>
    <string name="qora_tema">Qora tema</string>
    <string name="biznes_nomi">Biznes nomi</string>
    <string name="biznes_turini_tanlash">Biznes turini tanlash</string>
    <string name="biznes_turi">"Biznes turi"</string>
    <string name="wifi">Wifi</string>
    <string name="kuyov_navkar">Kuyov navkar</string>
    <string name="venue_title_place">Yakkasaroy palace</string>
    <string name="biznes">Biznes</string>
    <string name="biznes_haqida">Biznes haqida</string>
    <string name="malumot">Malumot</string>
    <string name="nomi_va_haqida">Nomi va haqida</string>
    <string name="biz_malumot">Biznesingiz haqida to\'liq malumot kiriting</string>
    <string name="rasmlar">Rasmlar</string>
    <string name="media_linklar">Media linklar</string>
    <string name="joylashuv">Joylashuv</string>
    <string name="subkategoriyalar">Subkategoriyalar</string>
    <string name="qulayliklar">Qulayliklar</string>
    <string name="tovarlar">Tovarlar</string>
    <string name="rasmlarni_yuklang">Rasmlarni yuklang</string>
    <string name="yuklash"><![CDATA[Yuklash >]]></string>
    <string name="kategoriya">Kategoriya</string>
    <string name="asosiy_rasm">Asosiy rasm</string>
    <string name="qo_shish">Rasm qo\'shish</string>
    <string name="o_zgartirish">O\'zgartirish</string>
    <string name="rasm">Rasm</string>
    <string name="o_chirish">O\'chirish</string>
    <string name="video_link">You tube video link</string>
    <string name="video_url_info">Video you tube havolasidan bulishi kerak</string>
    <string name="instagram_link">Instagram link</string>
    <string name="telegram_link">Telegram link</string>
    <string name="you_tube_link">You tube link</string>
    <string name="tashkent">Tashkent</string>
    <string name="samarqand">Samarqand</string>
    <string name="lokatsiya">Lokatsiya</string>
    <string name="yangi_qo_shish">+ Yangi qo\'shish</string>
    <string name="oilaviy_fotosisiya">Oilaviy fotosesiya</string>
    <string name="naxorgi_osh">Naxorgi osh</string>
    <string name="tuy_kechasi">Tuy kechasi</string>
    <string name="love_story">Love story</string>
    <string name="marry_me">Marry me</string>
    <string name="katta_parkovka">Katta parkovka</string>
    <string name="hamayonbob_narx">Hamayonbob narx</string>
    <string name="akkaundan_chiqish">Akkaundan chiqish</string>
    <string name="you_tube_link_qo_shish">You tube link qo\'shish</string>
    <string name="uzs">Uzs</string>
    <string name="sum">Sum</string>
    <string name="usd">Usd</string>
    <string name="dollar">$</string>
    <string name="tovarlar_bush">Tovarlar bush</string>
    <string name="tovar_qo_shish">+ Tovar qo\'shish</string>
    <string name="sample_price">100 000 sum</string>
    <string name="qidirish">Qidirish</string>
    <string name="uzbekiston">Butun mamlakat</string>
    <string name="qidiruv_manzili">Qidiruv manzili</string>
    <string name="location_address">Location address</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="malumot_qo_shish">Malumot qo\'shish</string>
    <string name="profilga_kirildi">profilga kirildi</string>
    <string name="hech_narsa_topilmadi">Hech narsa topilmadi</string>
    <string name="mashxurlari">Mashxurlari</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="kartada_ochish">Kartada</string>
    <string name="nomi">Nomi</string>
    <string name="narxi">Narxi</string>
    <string name="haqida">Haqida</string>
    <string name="ta_tovar">ta tovar\n</string>
    <string name="xizmat_narxi">Xizmat narxi</string>
    <string name="aniq_xizmat_narxi">Aniq xizmat narxi</string>
    <string name="boshlangich_narx">Boshlangich narx</string>
    <string name="xizmat_narxi_info">Bu narx klientlarga ko’rinadi, klientlar filter qilib olishlari uchun kerak</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="filter">Filter</string>
    <string name="saralash">Saralash</string>
    <string name="hamyonbob">Hamyonbob</string>
    <string name="aralash">Aralash</string>

</resources>