<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.uz.ui.base.MyToolBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/xizmat_narxi" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/done_button"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_18">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/price_type_chip_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exact_price_chip"
                        android:layout_width="wrap_content"
                        android:checkable="true"
                        android:layout_height="wrap_content"
                        android:text="@string/aniq_xizmat_narxi" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/min_price_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:layout_marginStart="@dimen/dimen_12"
                        android:text="@string/boshlangich_narx" />
                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_input_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:hint="@string/narxi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_type_chip_lay">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/currency_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24"
                    app:layout_constraintStart_toStartOf="@+id/price_input_view"
                    app:layout_constraintTop_toBottomOf="@+id/price_input_view">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/uzs_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/sum" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/usd_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_12"
                        android:checkable="true"
                        android:text="@string/dollar" />

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:text="@string/xizmat_narxi_info"
                    android:textColor="?colorOnSurfaceVariant"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_chip" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            style="@style/FilledButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_24"
            android:text="@string/saqlash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>