<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_18"
        android:paddingVertical="@dimen/dimen_24">

        <TextView
            android:id="@+id/title_view"
            style="@style/Title3_17"
            android:textColor="?colorOnSurface"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qidiruv_manzili" />

        <TextView
            android:id="@+id/address_view"
            style="@style/OutlineButton"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/dimen_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location_ic"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/location_address"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/FilledButton"
            android:backgroundTint="?colorPrimary"
            android:textColor="?colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/tasdiqlash" />

    </LinearLayout>
</layout>